--- a/react-app/src/App.css
+++ b/react-app/src/App.css
@@ -1,38 +1,50 @@
+* {
+  background-color: #282c34;
+
+}
+
 .App {
   text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+  font-family: 'Indie Flower', cursive;
+  font-size: 12pt;
+  margin: 30px;
+  color: #ffffff;
   display: flex;
-  flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  height: 100vh;
+  flex-flow: column;
 }
 
-.App-link {
-  color: #61dafb;
+.fact {
+  margin: 0 50px;
+  display: relative;
+  top: 20px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+img {
+  height: 100px;
+  width: 100px;
+  position: absolute;
+}
+
+img:hover {
+  rotate: 20deg;
+}
+
+img.elephant {
+  bottom: 50px;
+  right: 40px;
+}
+
+img.alligator {
+  top: 0;
+  left: 30px;
+  -webkit-transform: scaleX(-1);
+  transform: scaleX(-1);
+}
+
+img.giraffe {
+  top: 30px;
+  right: 0px;
 }
